--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -11,7 +11,18 @@
 </head>
 <body>
 
-  <h1>Perguntar!</h1>
+  <div class="container">
+    <h3>Realizar Pergunta</h3>
+    <hr>
+    <form>
+      <label>Título</label>
+      <input type="text" placeholder="Título" class="form-control">
+      <br><label>Descrição</label>
+      <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+      <br>
+      <button class="btn btn-success">Perguntar</button>
+    </form>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
