--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -5,13 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Guia de perguntas</title>
 </head>
 
 <body>
-
+  <nav class="navbar navbar-light bg-dark">
+    <a class="navbar-brand" href="/">
+      Gabriel Merigo
+    </a>
+  </nav>
   <div class="container">
     <div class="card">
       <div class="card-header">
