--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,46 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Guia de perguntas</title>
-</head>
-
+<%- include ('partials/header.ejs') %>
 <body>
-  <nav class="navbar navbar-light bg-dark">
-    <a class="navbar-brand" href="/">
-      Gabriel Merigo
-    </a>
-  </nav>
-  <div class="container">
+  <%- include ('partials/navbar.ejs') %>
+  <div class="container" id="formulario">
     <div class="card">
       <div class="card-header">
         <h3>Realizar Pergunta</h3>
       </div>
+
       <card class="card-body">
-        <form>
+        <form method="POST" action="/savequestion">
           <label>Título</label>
           <input type="text" placeholder="Título" class="form-control">
           <br><label>Descrição</label>
           <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
           <br>
-          <button class="btn btn-success">Perguntar</button>
+          <button class="btn btn-dark">Perguntar</button>
         </form>
       </card>
+
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-    integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-    crossorigin="anonymous"></script>
-  <script src="/js/bootstrap.min.js"></script>
 </body>
-
-</html>
+<%- include ('partials/footer.ejs') %>
