--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,8 @@
 
 <body>
   <%- include('partials/navbar.ejs') %>
+  <div class="container">
+    
+  </div>
 </body>
 <%- include('partials/footer.ejs') %>
