--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,23 +6,24 @@
         <h1>Perguntas</h1>
         <hr>
         <a href="/perguntar" class="btn btn-primary">Perguntar</a>
-        <hr>
 
         <% perguntas.forEach(pergunta=> { %>
-          <br />
-          <div class="card">
-            <div class="card-body">
-              <h3>
-                <%= pergunta.title %>
-              </h3>
+            <br />
+            <div class="card">
+              <div class="card-body">
+                <h3>
+                  <%= pergunta.title %>
+                </h3>
+              </div>
+              <div class="card-footer">
+                <a href="/pergunta/<%= pergunta.id %>">
+                  <button class="btn btn-primary">
+                    Responder
+                  </button>
+                </a>
+              </div>
             </div>
-            <div class="card-footer">
-              <button class="btn btn-primary">
-                Responder
-              </button>
-            </div>
-          </div>
-          <% }) %>
+            <% }) %>
       </div>
 
   </body>
