--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       <div class="container">
         <h1>Perguntas</h1>
         <hr>
-        <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+        <a href="/perguntar" class="btn btn-danger mb-5">Perguntar</a>
 
         <% perguntas.forEach(pergunta=> { %>
             <br />
