--- a/views/question.ejs
+++ b/views/question.ejs
@@ -1,17 +1,33 @@
 <%- include('partials/header.ejs') %>
 
-<body>
-  <%- include('partials/navbar.ejs') %>
-    <div class="container">
-      <h1><%= pergunta.title %></h1>
-      <p><%= pergunta.description %></p>
-      <form method="post" action="/answer">
-        <h3>Responda</h3>
-        <label for="">Resposta:</label>
-        <textarea placeholder="Digite sua resposta" class="form-control" name="answerBody"></textarea><br>
-        <input type="hidden" name="question" value="<%= pergunta.id %>">
-        <button type="submit" class="btn btn-primary">Responda</butto>
-      </form>
-    </div>
-</body>
-<%- include('partials/footer.ejs') %>
+  <body>
+    <%- include('partials/navbar.ejs') %>
+      <div class="container">
+        <h1>
+          <%= pergunta.title %>
+        </h1>
+        <p>
+          <%= pergunta.description %>
+        </p>
+
+        <form method="POST" action="/answer">
+          <h3>Responda</h3>
+          <label for="">Resposta:</label>
+          <textarea placeholder="Digite sua resposta" class="form-control" name="answerBody"></textarea><br>
+          <input type="hidden" name="question" value="<%= pergunta.id %>">
+          <button type="submit" class="btn btn-primary">Responda</button>
+        </form>
+        <br>
+        <h3>Respostas:</h3>
+        <hr>
+        <% answers.forEach(answer=> { %>
+          <br>
+          <div class="card">
+            <div class="card-body">
+              <%= answer.answer %>
+            </div>
+          </div>
+        <% }) %>
+      </div>
+  </body>
+  <%- include('partials/footer.ejs') %>
